---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
function `__main__` (registers: 8, length: 154 (616 bytes))
.const
  0: "a"
  1: Int(0)
.code
  lbt   r1              ; if true {
  jf    r1, if::next#1
  lnil  r2              ; let o
  lsmi  1, r3           ; o += 1
  add   r2, r3, r2
  lsmi  1, r3           ; o -= 1
  sub   r2, r3, r2
  lsmi  1, r3           ; o *= 1
  mul   r2, r3, r2
  lsmi  1, r3           ; o /= 1
  div   r2, r3, r2
  lsmi  1, r3           ; o %= 1
  rem   r2, r3, r2
  lsmi  1, r3           ; o **= 1
  pow   r2, r3, r2
  lnil  r1
<if::next#1>:
<if::end#0>:
  lbt   r1              ; if true {
  jf    r1, if::next#3
  lnil  r2              ; let o
  lf    r2, [0], r4     ; o.a += 1
  lsmi  1, r5
  add   r4, r5, r4
  sf    r2, [0], r4
  lf    r2, [0], r4     ; o.a -= 1
  lsmi  1, r5
  sub   r4, r5, r4
  sf    r2, [0], r4
  lf    r2, [0], r4     ; o.a *= 1
  lsmi  1, r5
  mul   r4, r5, r4
  sf    r2, [0], r4
  lf    r2, [0], r4     ; o.a /= 1
  lsmi  1, r5
  div   r4, r5, r4
  sf    r2, [0], r4
  lf    r2, [0], r4     ; o.a %= 1
  lsmi  1, r5
  rem   r4, r5, r4
  sf    r2, [0], r4
  lf    r2, [0], r4     ; o.a **= 1
  lsmi  1, r5
  pow   r4, r5, r4
  sf    r2, [0], r4
  lnil  r1
<if::next#3>:
<if::end#2>:
  lbt   r1              ; if true {
  jf    r1, if::next#5
  lnil  r2              ; let o
  lfi   r2, [1], r4     ; o.0 += 1
  lsmi  1, r5
  add   r4, r5, r4
  sfi   r2, [1], r4
  lfi   r2, [1], r4     ; o.0 -= 1
  lsmi  1, r5
  sub   r4, r5, r4
  sfi   r2, [1], r4
  lfi   r2, [1], r4     ; o.0 *= 1
  lsmi  1, r5
  mul   r4, r5, r4
  sfi   r2, [1], r4
  lfi   r2, [1], r4     ; o.0 /= 1
  lsmi  1, r5
  div   r4, r5, r4
  sfi   r2, [1], r4
  lfi   r2, [1], r4     ; o.0 %= 1
  lsmi  1, r5
  rem   r4, r5, r4
  sfi   r2, [1], r4
  lfi   r2, [1], r4     ; o.0 **= 1
  lsmi  1, r5
  pow   r4, r5, r4
  sfi   r2, [1], r4
  lnil  r1
<if::next#5>:
<if::end#4>:
  lbt   r1              ; if true {
  jf    r1, if::next#7
  lnil  r2              ; let o
  lc    [0], r4         ; o["a"] += 1
  lc    [0], r7
  li    r2, r7, r5
  lsmi  1, r6
  add   r5, r6, r5
  si    r2, r4, r5
  lc    [0], r4         ; o["a"] -= 1
  lc    [0], r7
  li    r2, r7, r5
  lsmi  1, r6
  sub   r5, r6, r5
  si    r2, r4, r5
  lc    [0], r4         ; o["a"] *= 1
  lc    [0], r7
  li    r2, r7, r5
  lsmi  1, r6
  mul   r5, r6, r5
  si    r2, r4, r5
  lc    [0], r4         ; o["a"] /= 1
  lc    [0], r7
  li    r2, r7, r5
  lsmi  1, r6
  div   r5, r6, r5
  si    r2, r4, r5
  lc    [0], r4         ; o["a"] %= 1
  lc    [0], r7
  li    r2, r7, r5
  lsmi  1, r6
  rem   r5, r6, r5
  si    r2, r4, r5
  lc    [0], r4         ; o["a"] **= 1
  lc    [0], r7
  li    r2, r7, r5
  lsmi  1, r6
  pow   r5, r6, r5
  si    r2, r4, r5
  lnil  r1
<if::next#7>:
<if::end#6>:
  lbt   r0              ; if true {
  jf    r0, if::next#9
  lnil  r1              ; let o
  lsmi  0, r3           ; o[0] += 1
  lsmi  0, r6
  li    r1, r6, r4
  lsmi  1, r5
  add   r4, r5, r4
  si    r1, r3, r4
  lsmi  0, r3           ; o[0] -= 1
  lsmi  0, r6
  li    r1, r6, r4
  lsmi  1, r5
  sub   r4, r5, r4
  si    r1, r3, r4
  lsmi  0, r3           ; o[0] *= 1
  lsmi  0, r6
  li    r1, r6, r4
  lsmi  1, r5
  mul   r4, r5, r4
  si    r1, r3, r4
  lsmi  0, r3           ; o[0] /= 1
  lsmi  0, r6
  li    r1, r6, r4
  lsmi  1, r5
  div   r4, r5, r4
  si    r1, r3, r4
  lsmi  0, r3           ; o[0] %= 1
  lsmi  0, r6
  li    r1, r6, r4
  lsmi  1, r5
  rem   r4, r5, r4
  si    r1, r3, r4
  lsmi  0, r3           ; o[0] **= 1
  lsmi  0, r6
  li    r1, r6, r4
  lsmi  1, r5
  pow   r4, r5, r4
  si    r1, r3, r4
  lnil  r0
<if::next#9>:
<if::end#8>:
  fin   
  ret   r0

